--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
             </div>
 
             <div class="mt-10 text-center">
-                <a href="testimonios-completos.html" id="ver-todos-testimonios-btn"
+                <a href="page/testimonios-completos.html" id="ver-todos-testimonios-btn"
                     class="inline-block bg-[#627eff] hover:bg-[#53c6e4] text-white font-semibold py-3 px-8 rounded-full shadow-md transition duration-300 ease-in-out">
                     Ver todos los testimonios
                 </a>
