--- a/servicios-empresariales.html
+++ b/servicios-empresariales.html
@@ -112,11 +112,11 @@
             </button>
 
             <nav id="menu" class="hidden md:flex space-x-4 text-sm font-semibold">
-                <a href="index.html" class="hover:text-gray-200">Inicio</a>
-                <a href="index.html#nosotros" class="hover:text-gray-200">Nosotros</a>
-                <a href="index.html#servicios" class="hover:text-gray-200">Servicios</a>
-                <a href="index.html#equipo" class="hover:text-gray-200">Equipo</a>
-                <a href="#contacto" class="hover:text-gray-200">Contacto</a>
+                <a href="index.html" class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Inicio</a>
+                <a href="index.html#nosotros" class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Nosotros</a>
+                <a href="index.html#servicios" class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Servicios</a>
+                <a href="index.html#equipo" class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Equipo</a>
+                <a href="#contacto" class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Contacto</a>
             </nav>
         </div>
 
