--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
     </script>
 
 
-
+<!-- Redes sociales -->
     <div class="fixed top-1/3 left-0 z-40 flex flex-col space-y-3 px-2">
         <a href="https://www.instagram.com/serviciospsicobienestar?utm_source=qr&igsh=NmtoOWFqMnZwMHY1" target="_blank"
             class="group relative flex items-center">
@@ -825,8 +825,6 @@
             </span>
         </div>
     </a>
-
-
 </body>
 
 </html>
