--- a/servicios-empresariales.html
+++ b/servicios-empresariales.html
@@ -112,11 +112,16 @@
             </button>
 
             <nav id="menu" class="hidden md:flex space-x-4 text-sm font-semibold">
-                <a href="index.html" class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Inicio</a>
-                <a href="index.html#nosotros" class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Nosotros</a>
-                <a href="index.html#servicios" class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Servicios</a>
-                <a href="index.html#equipo" class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Equipo</a>
-                <a href="#contacto" class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Contacto</a>
+                <a href="index.html"
+                    class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Inicio</a>
+                <a href="index.html#nosotros"
+                    class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Nosotros</a>
+                <a href="index.html#servicios"
+                    class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Servicios</a>
+                <a href="index.html#equipo"
+                    class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Equipo</a>
+                <a href="#contacto"
+                    class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Contacto</a>
             </nav>
         </div>
 
@@ -201,10 +206,10 @@
                             alt="Imagen Empresarial 2" class="w-full h-64 object-cover rounded-xl"></li>
                     <li class="splide__slide"><img src="assets/img_empresarial/empresarial_8.jpeg"
                             alt="Imagen Empresarial 8" class="w-full h-64 object-cover rounded-xl"></li>
-                            <li class="splide__slide"><img src="assets/img_empresarial/empresarial_9.jpeg"
-                                alt="Imagen Empresarial 9" class="w-full h-64 object-cover rounded-xl"></li>
-                                <li class="splide__slide"><img src="assets/img_empresarial/empresarial_5.jpeg"
-                                    alt="Imagen Empresarial 5" class="w-full h-64 object-cover rounded-xl"></li>
+                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_9.jpeg"
+                            alt="Imagen Empresarial 9" class="w-full h-64 object-cover rounded-xl"></li>
+                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_5.jpeg"
+                            alt="Imagen Empresarial 5" class="w-full h-64 object-cover rounded-xl"></li>
                 </ul>
             </div>
         </div>
@@ -256,9 +261,15 @@
     <footer class="bg-[#66a6da] text-white text-center py-8 mt-12">
         <div class="container mx-auto">
             <p class="font-sego text-sm mb-2">Psicología & Bienestar © 2025. Todos los derechos reservados.</p>
+            <div class="text-sm mt-4">
+                <p>Contacto:</p>
+                <p>Email: <a href="mailto:serviciospsicobienestar@gmail.com"
+                        class="text-white hover:underline">serviciospsicobienestar@gmail.com</a></p>
+                <p>Teléfonos: <a href="tel:+573175005472" class="text-white hover:underline">3175005472</a> - <a
+                        href="tel:+573132069954" class="text-white hover:underline">3132069954</a></p>
+            </div>
         </div>
     </footer>
-
     <div class="fixed top-1/3 left-0 z-40 flex flex-col space-y-3 px-2">
         <a href="https://www.instagram.com/serviciospsicobienestar?utm_source=qr&igsh=NmtoOWFqMnZwMHY1" target="_blank"
             class="group relative flex items-center">
