--- a/pages/servicio-empresarial.html
+++ b/pages/servicio-empresarial.html
@@ -399,6 +399,12 @@
           >
             ← Volver a Inicio
           </a>
+          <a
+            href="../pages/galeria.html"
+            class="inline-block bg-[#627eff] text-white py-2 px-6 rounded-lg shadow hover:bg-[#53c6e4] transition"
+          >
+            Ver la galería de nuestros servicios
+          </a>
         </div>
       </section>
 
