--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         >
           <div>
             <img
-              src="assets/sindy_team.png"
+              src="assets/team/sindy_team.png"
               class="mx-auto rounded-full mb-4 w-40 h-40 object-cover"
               alt="Miembro 1"
             />
@@ -361,7 +361,7 @@
           </div>
           <div>
             <img
-              src="assets/felipe_team.png"
+              src="assets/team/felipe_team.png"
               class="mx-auto rounded-full mb-4 w-40 h-40 object-cover"
               alt="Miembro 2"
             />
@@ -372,7 +372,7 @@
           </div>
           <div>
             <img
-              src="assets/viviana_team.png"
+              src="assets/team/viviana_team.png"
               class="mx-auto rounded-full mb-4 w-40 h-40 object-cover"
               alt="Miembro 3"
             />
