--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
           <a href="#equipo" class="text-[#627eff] hover:text-[#53c6e4]"
             >Equipo</a
           >
+          <a
+            href="pages/galeria.html"
+            class="text-[#627eff] hover:text-[#53c6e4]"
+            >Galería</a
+          >
           <a href="#contacto" class="text-[#627eff] hover:text-[#53c6e4]"
             >Contacto</a
           >
@@ -129,6 +134,12 @@
           @click="closeMenu()"
           class="block py-2 text-[#627eff] hover:text-[#53c6e4]"
           >Equipo</a
+        >
+        <a
+          href="pages/galeria.html"
+          @click="closeMenu()"
+          class="block py-2 text-[#627eff] hover:text-[#53c6e4]"
+          >Galería</a
         >
         <a
           href="#contacto"
@@ -388,6 +399,15 @@
       <!-- Comentarios -->
       <section id="testimonios" class="py-20 bg-[#f0f8ff] scroll-mt-20">
         <div class="max-w-6xl mx-auto px-4">
+          <div class="text-center mb-10">
+            <a
+              href="pages/galeria.html"
+              class="inline-block bg-[#627eff] hover:bg-[#53c6e4] text-white font-semibold py-3 px-8 rounded-full shadow-md transition duration-300 ease-in-out"
+            >
+              Galería de nuestros servicios
+            </a>
+          </div>
+
           <h2
             class="text-3xl font-semibold text-primary text-[#627eff] text-center mb-10"
           >
@@ -526,8 +546,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-[#627eff] text-white py-6 mt-12 relative">
-      <!-- Ícono central decorativo -->
+    <footer class="bg-[#627eff] text-white py-6 relative">
       <div class="absolute -top-8 left-1/2 transform -translate-x-1/2">
         <img
           src="https://cdn-icons-png.flaticon.com/512/3771/3771556.png"
@@ -536,24 +555,38 @@
         />
       </div>
 
-      <div
-        class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0 text-center md:text-left"
-      >
-        <!-- Nombre y correo -->
-        <div>
-          <h2 class="text-lg font-semibold">
-            Psicología & Bienestar &copy; 2025
-          </h2>
-          <p class="text-sm">serviciospsicobienestar@gmail.com</p>
+      <div class="max-w-6xl mx-auto px-4">
+        <div
+          class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0 text-center md:text-left pt-8"
+        >
+          <div>
+            <h2 class="text-lg font-semibold">
+              Psicología & Bienestar &copy; 2025
+            </h2>
+            <p class="text-sm">serviciospsicobienestar@gmail.com</p>
+          </div>
+
+          <div class="space-y-1">
+            <p class="text-sm">
+              <span class="font-semibold">Teléfono 1:</span> +57 317 500 5472
+            </p>
+            <p class="text-sm">
+              <span class="font-semibold">Teléfono 2:</span> +57 313 206 9954
+            </p>
+          </div>
         </div>
 
-        <!-- Teléfonos -->
-        <div class="space-y-1">
-          <p class="text-sm">
-            <span class="font-semibold">Teléfono 1:</span> +57 317 500 5472
-          </p>
-          <p class="text-sm">
-            <span class="font-semibold">Teléfono 2:</span> +57 313 206 9954
+        <div class="text-center mt-6 pt-4 border-t border-white/20">
+          <p class="text-xs">
+            Desarrollado por
+            <a
+              href="https://jgsoftworks-site.netlify.app/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="font-semibold hover:underline"
+            >
+              JGSoftworks.dev
+            </a>
           </p>
         </div>
       </div>
