--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -217,7 +217,7 @@
             >Equipo</a
           >
           <a
-            href="pages/galeria.html"
+            href="../pages/galeria.html"
             class="text-[#627eff] hover:text-[#53c6e4]"
             >Galería</a
           >
@@ -256,7 +256,7 @@
           >Equipo</a
         >
         <a
-          href="pages/galeria.html"
+          href="../pages/galeria.html"
           @click="closeMenu()"
           class="block py-2 text-[#627eff] hover:text-[#53c6e4]"
           >Galería</a
