--- a/pages/servicio-empresarial.html
+++ b/pages/servicio-empresarial.html
@@ -154,7 +154,7 @@
             >Equipo</a
           >
           <a
-            href="pages/galeria.html"
+            href="../pages/galeria.html"
             class="text-[#627eff] hover:text-[#53c6e4]"
             >Galería</a
           >
@@ -191,7 +191,7 @@
           >Equipo</a
         >
         <a
-          href="pages/galeria.html"
+          href="../pages/galeria.html"
           @click="closeMenu()"
           class="block py-2 text-[#627eff] hover:text-[#53c6e4]"
           >Galería</a
