--- a/pages/servicio-empresarial.html
+++ b/pages/servicio-empresarial.html
@@ -24,6 +24,10 @@
       rel="stylesheet"
       href="https://unpkg.com/@splidejs/splide@4.1.3/dist/css/splide.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <style>
       body {
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -34,6 +38,17 @@
         background-position: center center;
         /* Cambiado a center center */
         color: #333;
+      }
+      :root {
+        --header-height: 64px;
+      }
+      @media (max-width: 768px) {
+        :root {
+          --header-height: 60px;
+        }
+      }
+      main {
+        padding-top: var(--header-height);
       }
 
       .bg-white {
@@ -111,7 +126,11 @@
 
         <!-- Logo centrado y nombre en móvil -->
         <div class="flex flex-col items-center justify-center mx-auto">
-          <img src="../img/logo.png" alt="Logo" class="h-10 w-auto" />
+          <img
+            src="../img/logo.png"
+            alt="Logo"
+            class="h-10 w-auto max-w-full"
+          />
           <span class="mt-2 text-[#627eff] text-lg font-semibold md:hidden">
             Psicología & Bienestar
           </span>
@@ -157,13 +176,19 @@
             >Equipo</a
           >
           <a
-            href="../pages/galeria.html"
+            href="../pages/verGaleria.html"
             class="text-[#627eff] hover:text-[#53c6e4]"
             >Galería</a
           >
           <a href="#contacto" class="text-[#627eff] hover:text-[#53c6e4]"
             >Contacto</a
           >
+          <a
+            href="../pages/dashboard.html"
+            class="text-[#627eff] hover:text-[#53c6e4]"
+            title="Dashboard"
+            ><i class="fa fa-user-circle" style="font-size: 1.5rem"></i
+          ></a>
         </nav>
       </div>
 
@@ -194,7 +219,7 @@
           >Equipo</a
         >
         <a
-          href="../pages/galeria.html"
+          href="../pages/verGaleria.html"
           @click="closeMenu()"
           class="block py-2 text-[#627eff] hover:text-[#53c6e4]"
           >Galería</a
@@ -205,10 +230,18 @@
           class="block py-2 text-[#627eff] hover:text-[#53c6e4]"
           >Contacto</a
         >
+        <a
+          href="../pages/dashboard.html"
+          @click="closeMenu()"
+          class="block py-2 text-[#627eff] hover:text-[#53c6e4]"
+          title="Dashboard"
+          ><i class="fa fa-user-circle" style="font-size: 1.5rem"></i>
+          Dashboard</a
+        >
       </div>
     </header>
 
-    <main class="pt-20">
+    <main class="pt-20" style="padding-top: var(--header-height)">
       <section class="py-20 px-6 md:px-20" id="servicios">
         <h2
           class="text-3xl md:text-4xl font-bold text-center text-[#627eff] mb-6"
@@ -302,105 +335,105 @@
                 <img
                   src="../assets/img_em/empresarial_1.jpeg"
                   alt="Imagen Empresarial 1"
-                  class="w-full h-64 object-cover rounded-xl"
+                  class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_7.jpeg"
                   alt="Imagen Empresarial 7"
-                  class="w-full h-64 object-cover rounded-xl"
+                  class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_3.jpeg"
                   alt="Imagen Empresarial 3"
-                  class="w-full h-64 object-cover rounded-xl"
+                  class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_10.jpeg"
                   alt="Imagen Empresarial 10"
-                  class="w-full h-64 object-cover rounded-xl"
+                  class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_4.jpeg"
                   alt="Imagen Empresarial 4"
-                  class="w-full h-64 object-cover rounded-xl"
+                  class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_6.jpeg"
                   alt="Imagen Empresarial 6"
-                  class="w-full h-64 object-cover rounded-xl"
+                  class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_2.jpeg"
                   alt="Imagen Empresarial 2"
-                  class="w-full h-64 object-cover rounded-xl"
+                  class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_8.jpeg"
                   alt="Imagen Empresarial 8"
-                  class="w-full h-64 object-cover rounded-xl"
+                  class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_9.jpeg"
                   alt="Imagen Empresarial 9"
-                  class="w-full h-64 object-cover rounded-xl"
+                  class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_5.jpeg"
                   alt="Imagen Empresarial 5"
-                  class="w-full h-64 object-cover rounded-xl"
+                  class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_galeria/galeria_em1.jpeg"
                   alt="Imagen Empresarial 11"
-                  class="w-full h-64 object-cover rounded-xl"
+                  class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_galeria/galeria_em2.jpeg"
                   alt="Imagen Empresarial 12"
-                  class="w-full h-64 object-cover rounded-xl"
+                  class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_galeria/galeria_em3.jpeg"
                   alt="Imagen Empresarial 13"
-                  class="w-full h-64 object-cover rounded-xl"
+                  class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_galeria/galeria_em4.jpeg"
                   alt="Imagen Empresarial 14"
-                  class="w-full h-64 object-cover rounded-xl"
+                  class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_galeria/galeria_em5.jpeg"
                   alt="Imagen Empresarial 15"
-                  class="w-full h-64 object-cover rounded-xl"
+                  class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
             </ul>
