--- a/pages/verGaleria.html
+++ b/pages/verGaleria.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Psicología & Bienestar Empresarial</title>
+    <title>Galería Pública | Psicología & Bienestar</title>
     <link rel="icon" type="image/png" href="../img/logo.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link
@@ -21,45 +21,12 @@
       rel="stylesheet"
       href="https://unpkg.com/@splidejs/splide@4.1.3/dist/css/splide.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="../css/styles.css" />
     <style>
-      .bg-white {
-        background-color: rgba(255, 255, 255, 0.8);
-      }
-
-      .perspective {
-        perspective: 1000px;
-      }
-
-      .transform-style-preserve-3d {
-        transform-style: preserve-3d;
-      }
-
-      .backface-hidden {
-        backface-visibility: hidden;
-      }
-
-      .rotate-y-180 {
-        transform: rotateY(180deg);
-      }
-
-      .overflow-y-auto::-webkit-scrollbar {
-        display: none;
-        /* oculta scroll en caso de desborde */
-      }
-
-      @font-face {
-        font-family: "Sego Serif";
-        src: url("fonts/sego-serif.ttf") format("truetype");
-        font-weight: normal;
-        font-style: normal;
-      }
-
-      .font-sego {
-        font-family: "Sego Serif", serif;
-      }
-
-      /* CSS adicional para proporciones uniformes de la galería */
       .gallery-item {
         position: relative;
         width: 100%;
@@ -69,25 +36,22 @@
         border: 2.5px solid #627eff;
         background: transparent;
         background-clip: padding-box;
-        box-shadow:
-          0 2px 12px 0 rgba(98,127,255,0.10),
-          0 1.5px 6px 0 rgba(0,0,0,0.08),
-          inset 0 1px 8px 0 rgba(98,127,255,0.08);
-        transition: box-shadow 0.3s, transform 0.3s, border-color 0.3s, background 0.3s;
+        box-shadow: 0 2px 12px 0 rgba(98, 127, 255, 0.1),
+          0 1.5px 6px 0 rgba(0, 0, 0, 0.08),
+          inset 0 1px 8px 0 rgba(98, 127, 255, 0.08);
+        transition: box-shadow 0.3s, transform 0.3s, border-color 0.3s,
+          background 0.3s;
         overflow: hidden;
       }
-
       .gallery-item:hover {
-        box-shadow:
-          0 4px 24px 0 rgba(98,127,255,0.18),
-          0 3px 12px 0 rgba(0,0,0,0.12),
-          inset 0 2px 16px 0 rgba(98,127,255,0.12);
+        box-shadow: 0 4px 24px 0 rgba(98, 127, 255, 0.18),
+          0 3px 12px 0 rgba(0, 0, 0, 0.12),
+          inset 0 2px 16px 0 rgba(98, 127, 255, 0.12);
         border-color: #53c6e4;
-        background: rgba(255,255,255,0.75);
+        background: rgba(255, 255, 255, 0.75);
         transform: translateY(-4px) scale(1.03);
         z-index: 2;
       }
-
       .gallery-item img {
         position: absolute;
         top: 0;
@@ -100,12 +64,11 @@
         filter: brightness(0.98) contrast(1.05);
         background: transparent;
         display: block;
+        cursor: pointer;
       }
-
       .gallery-item img:hover {
         filter: brightness(1.05) contrast(1.1);
       }
-
       #galeria-imagenes {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
@@ -113,22 +76,14 @@
         overflow: visible;
         max-height: none;
       }
-
       @media (max-width: 640px) {
         #galeria-imagenes {
           grid-template-columns: repeat(2, 1fr);
         }
-
         .gallery-item {
           aspect-ratio: 1/1;
         }
-
-        .redes-laterales {
-          display: none !important;
-        }
       }
-
-      /* Lightbox mejoras: permite scroll táctil en móvil */
       #lightbox {
         transition: opacity 0.3s;
         opacity: 0;
@@ -138,29 +93,27 @@
         justify-content: center;
         overflow: auto;
       }
-
       #lightbox:not(.hidden) {
         opacity: 1;
         pointer-events: auto;
         display: flex;
       }
-
       #lightbox img {
         border-radius: 1rem;
-        box-shadow: 0 4px 24px 0 rgba(98,127,255,0.18), 0 3px 12px 0 rgba(0,0,0,0.12);
+        box-shadow: 0 4px 24px 0 rgba(98, 127, 255, 0.18),
+          0 3px 12px 0 rgba(0, 0, 0, 0.12);
         max-width: 90vw;
         max-height: 80vh;
         margin: auto;
         display: block;
       }
-
-      /* Lightbox botones mejorados */
       .lightbox-btn {
         position: absolute;
         background: rgba(40, 40, 60, 0.45);
         border: none;
         border-radius: 50%;
-        box-shadow: 0 2px 12px rgba(98,127,255,0.18), 0 1.5px 6px rgba(0,0,0,0.12);
+        box-shadow: 0 2px 12px rgba(98, 127, 255, 0.18),
+          0 1.5px 6px rgba(0, 0, 0, 0.12);
         color: #fff;
         width: 56px;
         height: 56px;
@@ -174,16 +127,21 @@
         opacity: 0.92;
       }
       .lightbox-btn:hover {
-        background: rgba(98,127,255,0.85);
+        background: rgba(98, 127, 255, 0.85);
         transform: scale(1.12);
-        box-shadow: 0 4px 24px rgba(98,127,255,0.28), 0 3px 12px rgba(0,0,0,0.18);
+        box-shadow: 0 4px 24px rgba(98, 127, 255, 0.28),
+          0 3px 12px rgba(0, 0, 0, 0.18);
         opacity: 1;
       }
       .lightbox-btn:active {
         transform: scale(0.98);
       }
-      #lightbox-prev { left: 2vw; }
-      #lightbox-next { right: 2vw; }
+      #lightbox-prev {
+        left: 2vw;
+      }
+      #lightbox-next {
+        right: 2vw;
+      }
       #lightbox-close {
         top: 2vw;
         right: 2vw;
@@ -205,31 +163,24 @@
           font-size: 1.3rem;
         }
       }
-
+      :root {
+        --header-height: 64px;
+      }
+      @media (max-width: 768px) {
+        :root {
+          --header-height: 60px;
+        }
+      }
+      main {
+        padding-top: var(--header-height);
+      }
     </style>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              primary: "#627eff",
-              secondary: "#53c6e4",
-              accent: "#66a6da",
-            },
-          },
-        },
-      };
-    </script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-      integrity="sha512-..."
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
   </head>
-
-  <body class="bg-white text-gray-800">
+  <body
+    class="bg-white text-gray-800 font-sans"
+    style="min-height: 100vh; display: flex; flex-direction: column"
+  >
+    <!-- Navbar -->
     <header
       x-data="{ open: false, closeMenu() { this.open = false } }"
       class="bg-white shadow fixed top-0 left-0 w-full z-50"
@@ -242,15 +193,16 @@
             >Psicología & Bienestar</span
           >
         </div>
-
-        <!-- Logo centrado y nombre en móvil -->
         <div class="flex flex-col items-center justify-center mx-auto">
-          <img src="../img/logo.png" alt="Logo" class="h-10 w-auto" />
+          <img
+            src="../img/logo.png"
+            alt="Logo"
+            class="h-10 w-auto max-w-full"
+          />
           <span class="mt-2 text-[#627eff] text-lg font-semibold md:hidden">
             Psicología & Bienestar
           </span>
         </div>
-
         <button
           @click="open = !open"
           class="md:hidden absolute right-4 text-[#627eff] focus:outline-none"
@@ -270,7 +222,6 @@
             />
           </svg>
         </button>
-
         <nav class="hidden md:flex absolute right-4 space-x-6">
           <a href="../index.html" class="text-[#627eff] hover:text-[#53c6e4]"
             >Inicio</a
@@ -291,18 +242,18 @@
             >Equipo</a
           >
           <a
-            href="../pages/galeria.html"
-            class="text-[#627eff] hover:text-[#53c6e4]"
-            >Galería</a
-          >
-          <a
             href="../index.html#contacto"
             class="text-[#627eff] hover:text-[#53c6e4]"
             >Contacto</a
           >
+          <a
+            href="../pages/dashboard.html"
+            class="text-[#627eff] hover:text-[#53c6e4]"
+            title="Dashboard"
+            ><i class="fa fa-user-circle" style="font-size: 1.5rem"></i
+          ></a>
         </nav>
       </div>
-
       <div x-show="open" x-transition class="md:hidden px-4 pb-4">
         <a
           href="../index.html"
@@ -328,23 +279,25 @@
           class="block py-2 text-[#627eff] hover:text-[#53c6e4]"
           >Equipo</a
         >
-        <a
-          href="#"
-          @click="closeMenu()"
-          class="block py-2 text-[#627eff] hover:text-[#53c6e4]"
-          >Galería</a
-        >
+
         <a
           href="../index.html#contacto"
           @click="closeMenu()"
           class="block py-2 text-[#627eff] hover:text-[#53c6e4]"
           >Contacto</a
         >
+        <a
+          href="../pages/dashboard.html"
+          @click="closeMenu()"
+          class="block py-2 text-[#627eff] hover:text-[#53c6e4]"
+          title="Dashboard"
+          ><i class="fa fa-user-circle" style="font-size: 1.5rem"></i>
+          Dashboard</a
+        >
       </div>
     </header>
-
-    <main class="pt-20">
-      <div class="container mx-auto px-4 py-8">
+    <main class="pt-20 flex-grow" style="padding-top: var(--header-height)">
+      <div class="py-20 px-6 md:px-20">
         <h2
           class="text-3xl md:text-4xl font-bold text-center text-[#627eff] mb-6"
         >
@@ -352,11 +305,10 @@
         </h2>
 
         <div
-          class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4"
+          class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 px-2 sm:px-4 md:px-8"
           id="galeria-imagenes"
         ></div>
       </div>
-
       <div
         id="lightbox"
         class="fixed top-0 left-0 w-full h-full bg-black bg-opacity-80 z-50 hidden flex justify-center items-center"
@@ -367,13 +319,20 @@
           alt="Imagen en pantalla completa"
           class="max-w-full max-h-full object-contain"
         />
-
         <button
           id="lightbox-prev"
           class="lightbox-btn hidden md:flex items-center justify-center"
           aria-label="Foto anterior"
         >
-          <svg width="32" height="32" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <svg
+            width="32"
+            height="32"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
             <circle cx="16" cy="16" r="15" stroke="rgba(255,255,255,0.18)" />
             <polyline points="18 10 12 16 18 22" />
           </svg>
@@ -383,7 +342,15 @@
           class="lightbox-btn hidden md:flex items-center justify-center"
           aria-label="Foto siguiente"
         >
-          <svg width="32" height="32" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <svg
+            width="32"
+            height="32"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
             <circle cx="16" cy="16" r="15" stroke="rgba(255,255,255,0.18)" />
             <polyline points="14 10 20 16 14 22" />
           </svg>
@@ -393,7 +360,15 @@
           class="lightbox-btn flex items-center justify-center"
           aria-label="Cerrar"
         >
-          <svg width="28" height="28" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+          <svg
+            width="28"
+            height="28"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2.5"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
             <circle cx="14" cy="14" r="13" stroke="rgba(255,255,255,0.18)" />
             <line x1="9" y1="9" x2="19" y2="19" />
             <line x1="19" y1="9" x2="9" y2="19" />
@@ -419,7 +394,6 @@
             </h2>
             <p class="text-sm">serviciospsicobienestar@gmail.com</p>
           </div>
-
           <div class="space-y-1">
             <p class="text-sm">
               <span class="font-semibold">Teléfono 1:</span> +57 317 500 5472
@@ -437,12 +411,10 @@
               target="_blank"
               rel="noopener noreferrer"
               class="font-semibold hover:underline"
+              >JGSoftworks.dev</a
             >
-              JGSoftworks.dev
-            </a>
           </p>
         </div>
-        <!-- Redes sociales en el footer para móviles -->
         <div class="flex justify-center space-x-6 mt-4 md:hidden">
           <a
             href="https://www.instagram.com/serviciospsicobienestar?utm_source=qr&igsh=NmtoOWFqMnZwMHY1"
@@ -469,8 +441,6 @@
         </div>
       </div>
     </footer>
-
-    <!-- Redes sociales laterales (solo escritorio) -->
     <div
       class="fixed top-1/3 left-0 z-40 flex flex-col space-y-3 px-2 redes-laterales"
     >
@@ -490,11 +460,9 @@
         </div>
         <span
           class="absolute left-12 bg-pink-500 text-white text-xs px-3 py-1 rounded shadow-lg opacity-0 scale-0 group-hover:opacity-100 group-hover:scale-100 transform transition-all duration-300 origin-left whitespace-nowrap"
+          >Visita nuestro Instagram</span
         >
-          Visita nuestro Instagram
-        </span>
       </a>
-
       <a
         href="https://www.facebook.com/share/1A9WZs7XCb/"
         target="_blank"
@@ -511,12 +479,10 @@
         </div>
         <span
           class="absolute left-12 bg-blue-600 text-white text-xs px-3 py-1 rounded shadow-lg opacity-0 scale-0 group-hover:opacity-100 group-hover:scale-100 transform transition-all duration-300 origin-left whitespace-nowrap"
+          >Visita nuestro Facebook</span
         >
-          Visita nuestro Facebook
-        </span>
       </a>
     </div>
-    <!-- Botón WhatsApp flotante -->
     <a
       href="https://wa.me/573164603881"
       target="_blank"
@@ -532,12 +498,10 @@
         />
         <span
           class="absolute right-16 bg-[#25D366] text-white text-sm px-3 py-1 rounded-lg shadow-lg opacity-0 scale-0 group-hover:opacity-100 group-hover:scale-100 transform transition-all duration-300 origin-right whitespace-nowrap"
+          >Escríbenos por WhatsApp</span
         >
-          Escríbenos por WhatsApp
-        </span>
       </div>
     </a>
-    <!-- Botón "Ir arriba" flotante solo en móvil -->
     <button
       onclick="window.scrollTo({top: 0, behavior: 'smooth'})"
       class="fixed bottom-24 right-6 z-50 bg-[#627eff] text-white rounded-full shadow-lg p-3 md:hidden flex items-center justify-center transition hover:bg-[#53c6e4]"
@@ -558,9 +522,7 @@
         />
       </svg>
     </button>
-
     <script defer src="../js/scripts.js"></script>
-    <script src="../js/galeria.js"></script>
+    <script src="../js/verGaleria.js"></script>
   </body>
-</html>
 </html>
