--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
             <!-- Campo -->
             <div class="relative">
               <label class="block text-sm font-semibold text-gray-800 mb-1"
-                >Nombre</label
+                ><input type="text" />Nombre</label
               >
               <div class="relative">
                 <input
@@ -511,7 +511,7 @@
 
             <div class="relative">
               <label class="block text-sm font-semibold text-gray-800 mb-1"
-                >Correo electrónico</label
+                ><input type="email" />Correo electrónico</label
               >
               <div class="relative">
                 <input
@@ -529,7 +529,7 @@
 
             <div class="relative">
               <label class="block text-sm font-semibold text-gray-800 mb-1"
-                >Teléfono</label
+                ><input type="number" />Teléfono</label
               >
               <div class="relative">
                 <input
@@ -548,7 +548,7 @@
 
             <div class="relative">
               <label class="block text-sm font-semibold text-gray-800 mb-1"
-                >Mensaje</label
+                ><input type="text" />Mensaje</label
               >
               <div class="relative">
                 <textarea
