--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
         <div class="max-w-6xl mx-auto px-4">
           <div class="text-center mb-10">
             <a
-              href="/pages/galeria.html"
+              href="/pages/verGaleria.html"
               class="inline-block bg-[#627eff] hover:bg-[#53c6e4] text-white font-semibold py-3 px-8 rounded-full shadow-md transition duration-300 ease-in-out"
             >
               Galería de nuestros servicios
