--- a/pages/servicio-empresarial.html
+++ b/pages/servicio-empresarial.html
@@ -334,105 +334,105 @@
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_1.jpeg"
-                  alt="Imagen Empresarial 1"
+                  alt="empresarial_1"
                   class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_7.jpeg"
-                  alt="Imagen Empresarial 7"
+                  alt="empresarial_7"
                   class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_3.jpeg"
-                  alt="Imagen Empresarial 3"
+                  alt="empresarial_3"
                   class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_10.jpeg"
-                  alt="Imagen Empresarial 10"
+                  alt="Empresarial 10"
                   class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_4.jpeg"
-                  alt="Imagen Empresarial 4"
+                  alt="Empresarial 4"
                   class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_6.jpeg"
-                  alt="Imagen Empresarial 6"
+                  alt="Empresarial 6"
                   class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_2.jpeg"
-                  alt="Imagen Empresarial 2"
+                  alt="Empresarial 2"
                   class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_8.jpeg"
-                  alt="Imagen Empresarial 8"
+                  alt="Empresarial 8"
                   class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_9.jpeg"
-                  alt="Imagen Empresarial 9"
+                  alt="Empresarial 9"
                   class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_em/empresarial_5.jpeg"
-                  alt="Imagen Empresarial 5"
+                  alt="Empresarial 5"
                   class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_galeria/galeria_em1.jpeg"
-                  alt="Imagen Empresarial 11"
+                  alt="Empresarial 11"
                   class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_galeria/galeria_em2.jpeg"
-                  alt="Imagen Empresarial 12"
+                  alt="Empresarial 12"
                   class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_galeria/galeria_em3.jpeg"
-                  alt="Imagen Empresarial 13"
+                  alt="Empresarial 13"
                   class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_galeria/galeria_em4.jpeg"
-                  alt="Imagen Empresarial 14"
+                  alt="Empresarial 14"
                   class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../assets/img_galeria/galeria_em5.jpeg"
-                  alt="Imagen Empresarial 15"
+                  alt="Empresarial 15"
                   class="w-full h-64 object-cover rounded-xl max-w-full"
                 />
               </li>
@@ -490,7 +490,7 @@
             <!-- Campo -->
             <div class="relative">
               <label class="block text-sm font-semibold text-gray-800 mb-1"
-                >Nombre</label
+                ><input type="text" />Nombre</label
               >
               <div class="relative">
                 <input
@@ -507,7 +507,7 @@
 
             <div class="relative">
               <label class="block text-sm font-semibold text-gray-800 mb-1"
-                >Correo electrónico</label
+                ><input type="email" />Correo electrónico</label
               >
               <div class="relative">
                 <input
@@ -525,7 +525,7 @@
 
             <div class="relative">
               <label class="block text-sm font-semibold text-gray-800 mb-1"
-                >Teléfono</label
+                ><input type="number" />Teléfono</label
               >
               <div class="relative">
                 <input
@@ -544,7 +544,7 @@
 
             <div class="relative">
               <label class="block text-sm font-semibold text-gray-800 mb-1"
-                >Mensaje</label
+                ><input type="text" />Mensaje</label
               >
               <div class="relative">
                 <textarea
